manifests_examples/purple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: purple
  name: purple
  namespace: colors
spec:
  volumes:
  - name: secret-volume
    secret:
      secretName: secret-purple
  containers:
  - image: redis:alpine
    name: purple
    volumeMounts:
    - mountPath: /tmp/data
      name: secret-volume
